[feature] Streamlined the Maven build [bugfix] Temporarily disabled some tests