@@ -8,32 +8,18 @@
   <artifactId>ScalaHadoop</artifactId>
   <version>1.0-SNAPSHOT</version>
 
-  <repositories>
-    <repository>
-      <id>scala-tools.org</id>
-      <name>Scala-tools Maven2 Repository</name>
-      <url>http://scala-tools.org/repo-releases</url>
-    </repository>
-    <repository>
-      <id>releases</id>
-      <name>Cloudera Releases</name>
-      <url>https://repository.cloudera.com/content/repositories/releases</url>
-    </repository>
-  </repositories>
-
-  <pluginRepositories>
-    <pluginRepository>
-      <id>scala-tools.org</id>
-      <name>Scala-tools Maven2 Repository</name>
-      <url>http://scala-tools.org/repo-releases</url>
-    </pluginRepository>
-  </pluginRepositories>
+  <licenses>
+      <license>
+          <name>Apache License Version 2.0</name>
+          <url>http://opensource.org/licenses/Apache-2.0</url>
+          <distribution>repo</distribution>
+      </license>
+  </licenses>
 
   <properties>
     <scala.version>2.10.2</scala.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
-
 
   <dependencies>
     <dependency>
@@ -48,12 +34,6 @@
     </dependency>
 
     <dependency>
-      <groupId>com.cloudera.hadoop</groupId>
-      <artifactId>hadoop-mrunit</artifactId>
-      <version>0.20.2-737</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
       <groupId>org.specs2</groupId>
       <artifactId>specs2_2.10</artifactId>
       <version>2.1.1</version>
@@ -64,57 +44,61 @@
 
   <build>
 
-    <plugins>
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>net.alchim31.maven</groupId>
+          <artifactId>scala-maven-plugin</artifactId>
+          <version>3.1.5</version>
+        </plugin>
+        <plugin>
+          <groupId>com.mmakowski</groupId>
+          <artifactId>maven-specs2-plugin</artifactId>
+          <version>0.4.1</version>
+        </plugin>
+      </plugins>
+    </pluginManagement>
 
+    <plugins>
       <plugin>
-        <groupId>org.scala-tools</groupId>
-        <artifactId>maven-scala-plugin</artifactId>
+        <groupId>net.alchim31.maven</groupId>
+        <artifactId>scala-maven-plugin</artifactId>
+        <configuration>
+          <recompileMode>all</recompileMode>   <!-- NOTE: "incremental" compilation although faster may require passing to MAVEN_OPTS="-XX:MaxPermSize=128m" -->
+          <useZincServer>true</useZincServer>          <!-- NOTE: if you have Zinc server installed and running, you can get faster compilation by enabling this -->
+        </configuration>
         <executions>
           <execution>
-            <id>compile</id>
             <goals>
               <goal>compile</goal>
-            </goals>
-            <phase>compile</phase>
-          </execution>
-          <execution>
-            <id>test-compile</id>
-            <goals>
               <goal>testCompile</goal>
             </goals>
-            <phase>test-compile</phase>
           </execution>
         </executions>
-        <configuration>
-          <scalaVersion>${scala.version}</scalaVersion>
-          <jvmArgs>
-            <jvmArg>-Xss1m</jvmArg>
-          </jvmArgs>
-        </configuration>
       </plugin>
-
       <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <configuration>
-          <source>1.6</source>
-          <target>1.6</target>
-        </configuration>
+        <groupId>com.mmakowski</groupId>
+        <artifactId>maven-specs2-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>verify</id>
+            <phase>verify</phase>
+            <goals>
+              <goal>run-specs</goal>
+            </goals>
+          </execution>
+        </executions>
+        <dependencies>
+          <dependency>
+            <groupId>org.pegdown</groupId>
+            <artifactId> pegdown</artifactId>
+            <version>1.4.1</version>
+            <scope>runtime</scope>
+          </dependency>
+        </dependencies>
       </plugin>
-
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <configuration>
-          <useSystemClassLoader>false</useSystemClassLoader>
-          <argLine>-Xmx512m</argLine>
-          <includes>
-            <include>**/*Unit.java</include>
-            <include>**/*Spec.java</include>
-          </includes>
-        </configuration>
-      </plugin>
-
     </plugins>
+
   </build>
+
 </project>
